--- a/src/main/resources/Templates/School/Classes/formModifyClass.html
+++ b/src/main/resources/Templates/School/Classes/formModifyClass.html
@@ -82,59 +82,7 @@
     <a class="btn btn-primary" th:href="@{/m-class/showManageClass}">Class List Manage</a>
 </div>
 </body>
-<script>
-    // if school selected, check level school to input class grade
-    document.addEventListener('DOMContentLoaded', function() {
-        const schoolSelect = document.getElementById('school_select');
-        const gradeSelect = document.getElementById('class_grade_select');
-
-        function getSchoolById(schoolId){
-            if (schoolId) {
-                fetch(`/m-class/getSchoolById/${schoolId}`)
-                    .then(response => response.json())
-                    .then(school => {
-                        const grade = school.level;
-
-                        // Xóa tất cả các option hiện tại trong gradeSelect
-                        gradeSelect.innerHTML = '';
-
-                        // Tạo lại các option dựa trên level của school
-                        let options = [];
-                        if (grade === 'Primary_School') {
-                            options = [1, 2, 3, 4, 5];
-                        } else if (grade === 'Junior_High_School') {
-                            options = [6, 7, 8, 9];
-                        } else if (grade === 'High_School'){
-                            options = [10, 11, 12];
-                        }
-
-                        // Thêm các option mới vào gradeSelect
-                        options.forEach(function(opt) {
-                            const optionElement = document.createElement('option');
-                            optionElement.value = opt;
-                            optionElement.textContent = opt;
-                            gradeSelect.appendChild(optionElement);
-                        });
-                    })
-                    .catch(error => {
-                        console.error('Error fetching school data:', error);
-                    });
-            }
-        }
-
-        schoolSelect.addEventListener('change', function() {
-            const schoolId = schoolSelect.value;
-            getSchoolById(schoolId);
-        });
-
-        // if school selected
-        const schoolId = schoolSelect.value;
-        if(schoolId){
-            getSchoolById(schoolId);
-        }
-    });
-</script>
-<script src="/JavaScript/function.js"></script>
+<script src="/JavaScript/views/classes/add-modify.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 <script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
