--- a/src/main/resources/Templates/User/indexUser.html
+++ b/src/main/resources/Templates/User/indexUser.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Manager User</title>
     <link href="/CSS/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/CSS/main.css" rel="stylesheet" type="text/css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 <div><h1>Manage User</h1></div>
@@ -23,7 +21,7 @@
         </div>
 <!--        END notify-->
 <!--        START SEARCH-->
-        <div th:replace="~{Fragment/searchElementForm :: searchElementForm('/m-user/search-name')}"></div>
+        <div th:replace="~{Fragment/searchElementForm :: searchElementForm('/m-user/auth/search-name')}"></div>
 <!--        END SEARCH-->
         <table>
             <thead>
@@ -46,8 +44,8 @@
                     <td th:text="${user.phoneNumber}"></td>
                     <td th:text="${user.position}"></td>
                     <td>
-                        <a th:href="@{/m-user/showModifyFormUser(id=${user.id})}" class="btn btn-success">Modify</a>
-                        <a th:href="@{/m-user/modify-delete(id=${user.id})}" class="btn btn-danger">Delete</a>
+                        <a th:href="@{/m-user/auth/showModifyFormUser(id=${user.id})}" class="btn btn-success">Modify</a>
+                        <a th:href="@{/m-user/auth/modify-delete(id=${user.id})}" class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
                 <!-- Hiển thị thông báo khi danh sách trống -->
@@ -57,25 +55,27 @@
             </tbody>
         </table>
     </div>
-    <div>
-        <span>
-            <a th:if="${userList.hasPrevious()}" th:href="@{/m-user/showManageUser(page=${userList.number - 1}, size=${userList.size})}">Previous</a>
-            <a th:if="${not userList.hasPrevious()}" href="#" class="disabled-link" aria-disabled="true">Previous</a>
-        </span>
-
-        <span th:each="i : ${#numbers.sequence(0, userList.totalPages - 1)}">
-            <a th:href="@{/m-user/showManageUser(page=${i}, size=${userList.size})}" th:text="${i + 1}" th:classappend="${i == userList.number} ? 'active' : ''">1</a>
-        </span>
-
-        <span>
-            <a th:if="${userList.hasNext()}" th:href="@{/m-user/showManageUser(page=${userList.number + 1}, size=${userList.size})}">Next</a>
-            <a th:if="${not userList.hasNext()}" href="#" aria-disabled="true" class="disabled-link">Next</a>
-        </span>
-    </div>
-    <div>
+    <div class="row">
         <div>
-            <a class="btn btn-primary" th:href="@{/m-user/showFormAddUser}">Add User</a>
-            <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
+            <span>
+                <a th:if="${userList.hasPrevious()}" th:href="@{/m-user/auth/showManageUser(page=${userList.number - 1}, size=${userList.size})}">Previous</a>
+                <a th:if="${not userList.hasPrevious()}" href="#" class="disabled-link" aria-disabled="true">Previous</a>
+            </span>
+
+            <span th:each="i : ${#numbers.sequence(0, userList.totalPages - 1)}">
+                <a th:href="@{/m-user/auth/showManageUser(page=${i}, size=${userList.size})}" th:text="${i + 1}" th:classappend="${i == userList.number} ? 'active' : ''">1</a>
+            </span>
+
+            <span>
+                <a th:if="${userList.hasNext()}" th:href="@{/m-user/auth/showManageUser(page=${userList.number + 1}, size=${userList.size})}">Next</a>
+                <a th:if="${not userList.hasNext()}" href="#" aria-disabled="true" class="disabled-link">Next</a>
+            </span>
+        </div>
+        <div>
+            <div>
+                <a class="btn btn-primary" th:href="@{/m-user/showFormAddUser}">Add User</a>
+                <a class="btn btn-primary" th:href="@{/event/backHomepage}">Return Home</a>
+            </div>
         </div>
     </div>
 </div>
@@ -84,4 +84,5 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 <script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
+<script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 </html>
