--- a/src/main/resources/Templates/User/modifyFormUser.html
+++ b/src/main/resources/Templates/User/modifyFormUser.html
@@ -12,7 +12,7 @@
 <body>
 <h1>Modify User</h1>
 <div>
-    <form th:action="@{/m-user/modify-process}" th:object="${user}" method="post">
+    <form th:action="@{/m-user/auth/modify-process}" th:object="${user}" method="post">
         <div th:if="${Error}" class="alert alert-danger">
             <span th:text="${Error}"></span>
         </div>
@@ -33,7 +33,7 @@
 </div>
 <div>
     <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
-    <a class="btn btn-primary" th:href="@{/m-user/showManageUser}">User List Manage</a>
+    <a class="btn btn-primary" th:href="@{/m-user/auth/showManageUser}">User List Manage</a>
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -42,4 +42,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
+<script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 </html>
