--- a/src/main/resources/Templates/home.html
+++ b/src/main/resources/Templates/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Home Page</title>
     <link href="/CSS/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">-->
     <link href="/CSS/main.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -95,7 +96,7 @@
             <button sec:authorize="hasAnyRole('ADMIN')" class="btn btn-success">Xóa</button>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-school/showManageSchool}">School
+            <a sec:authorize="hasAnyRole('ADMIN')" class="btn btn-primary" th:href="@{/m-school/showManageSchool}">School
                 Manage</a>
         </div>
         <div class="mt-1">
@@ -115,27 +116,27 @@
                th:href="@{/m-user/showManageUser}">User Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-class/showManageClass}">Class
+            <a sec:authorize="hasAnyRole('ADMIN')" class="btn btn-primary" th:href="@{/m-class/showManageClass}">Class
                 Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-note/showManageNotebook}">NoteBook
+            <a sec:authorize="hasAnyRole('ADMIN')" class="btn btn-primary" th:href="@{/m-note/showManageNotebook}">NoteBook
                 Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-subject/showManageSubject}">Subject
+            <a sec:authorize="hasAnyRole('ADMIN')" class="btn btn-primary" th:href="@{/m-subject/showManageSubject}">Subject
                 Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-transcript/showManageTranscript}">Transcript
+            <a sec:authorize="hasAnyRole('ADMIN')" class="btn btn-primary" th:href="@{/m-transcript/showManageTranscript}">Transcript
                 Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-study/showManageStudyRecord}">StudyRecord
+            <a sec:authorize="hasAnyRole('ADMIN')" class="btn btn-primary" th:href="@{/m-study/showManageStudyRecord}">StudyRecord
                 Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-score-card/showManageScoreCard}">ScoreCard
+            <a sec:authorize="hasAnyRole('ADMIN')" class="btn btn-primary" th:href="@{/m-score-card/showManageScoreCard}">ScoreCard
                 Manage</a>
         </div>
     </div>
@@ -145,4 +146,5 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 <script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </html>
