--- a/src/main/resources/Templates/Parent/modifyParent.html
+++ b/src/main/resources/Templates/Parent/modifyParent.html
@@ -21,7 +21,7 @@
         </div>
         <div class="form-outline mb-1">
             <label class="form-label" for="parentid">Parent Id: <span th:text="*{id}"></span></label>
-            <input type="hidden" th:field="*{id}" name="parentid" id="parentid">
+            <input type="hidden" th:field="*{id}" name="parent_id" id="parent_id">
         </div>
         <!-- START Fragment/CommonFieldInputUser-->
         <div th:replace="~{Fragment/CommonFieldInputUser :: fragmentCommonFieldInput}"></div>
